test/modules/sungeun/no-use-enum.good
no-use-enum.chpl:6: In function 'main':
no-use-enum.chpl:7: error: 'X' undeclared (first use this function)
no-use-enum.chpl:10: error: 'Z' undeclared (first use this function)
